--- a/responsive.css
+++ b/responsive.css
@@ -33,6 +33,19 @@
   .subtitle {
     font-size: 14px;
   }
+  .career {
+    padding: 10px;
+  }
+  .career-content,
+  .catalog {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .catalog {
+    gap: 10px;
+    align-items: start;
+  }
   .banner,
   .we-are-gamer {
     flex-direction: column-reverse;
